--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 		$rootScope.name = "Master";
 		$rootScope.status = "NA";
 		$http({
-			url: "https://www.w3schools.com/jquery/demo_test.asp",
+			url: "http://127.0.0.1:4467/sum?a=10&b=20",
 			method: "GET"
 		}).then(function(resp){
 			$rootScope.status = "Success";
